frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    font-family: "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,", sans-serif !important;
}
.active {
    @apply border-primary !important;
}
.tab {
    @apply border-b-2 border-transparent hover:bg-base-200 !important;
}
.tab-active {
    @apply border-primary font-semibold text-base-content !important;
}
.modal-box {
    @apply p-0 py-2 !important;
}

